--- a/project/rekrutacja/myapp/templates/index.html
+++ b/project/rekrutacja/myapp/templates/index.html
@@ -12,7 +12,7 @@
       <p>{{ request.user.username }}</p>
       <a href="{% url 'logout' %}">Logout</a>
     {% else %}
-      <a href="{% url 'login' %}">Login</a>
+      <a href="{% url 'login' %}">Login</a><br>
       <a href="{% url 'signup' %}">Signup</a>
     {% endif %}
      </div><br>
