--- a/project/rekrutacja/myapp/static/styles.css
+++ b/project/rekrutacja/myapp/static/styles.css
@@ -47,38 +47,21 @@
     position: absolute;
     border-radius: 8px;
     top: 100px;
-    left: 40%;
+    /* left: 40%; */
     background: #111810;
     background: rgba(0, 0, 0, 0.6);
-    width: 20%;
+    /* width: 20%; */
+    width: 100%;
     height: 24vw;
     overflow: auto;
     padding: 1.5vw;
     font-size: 1.5vw;
   }
-  
-  .text {
-    font-size: 1.2vw;
-  }
-  
-  .title {
-    font-size: 1.8vw;
-  }
-  
-  .maincolor {
-    background-color: #111810;
-  }
-  
-  .sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    bottom: 0;
-  }  
 
   .button {
     border: 3px solid #ddd;
     border-radius: 12px;
-    color: white;
+    color: black;
     padding: 1vw 1vw;
     text-align: center;
     text-decoration: none;
@@ -88,15 +71,6 @@
     cursor: pointer;
   }
 
-/* Video for background */
-  #myVideo {
-    position: fixed;
-    top: 0px;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-  }
 /* Top navigation */
   .topnav {
     overflow: hidden;
@@ -105,22 +79,24 @@
   .topnav a {
     float: left;
     align-items: right;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
     display: block;
     flex: 1;
+    /* border: 2px solid black;
+    border-radius: 10px; */
   }
   
   .topnav a:hover {
-    background-color: black;
-    color: #EF0B0B;
+    background-color: #585353;
+    color: black;
   }
   
   .topnav a.active {
-    background-color: #EF0B0B;
+    background-color: #585353;
     color: black;
   }
 
@@ -134,7 +110,7 @@
     font-size: 16px;
     border: none;
     outline: none;
-    color: white;
+    color: black;
     background-color: inherit;
     margin: 0;
     padding: 14px 16px;
@@ -144,14 +120,14 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #333;
+    background-color: white;
     min-width: 160px;
     z-index: 1;
 }
 
 .dropdown-content a {
     float: none;
-    color: white;
+    color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -159,7 +135,7 @@
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #585353;
     color: black;
 }
 
@@ -168,6 +144,8 @@
     position: fixed;
     z-index: 9999;
 }
+
+/* Kolumny i rzędy dla contentu */
   .row {
     font-size: 1.5vw;
   }
@@ -194,13 +172,6 @@
     clear: both;
     display: table;
     text-align: center;
-  }
-  
-  table {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
   }
   
   .col {
