--- a/project/rekrutacja/myapp/templates/signup.html
+++ b/project/rekrutacja/myapp/templates/signup.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <script src="../static/index.js"></script>
     <title>Login Page</title>
 </head>
 <div class="container"> 
