--- a/project/rekrutacja/myapp/static/styles.css
+++ b/project/rekrutacja/myapp/static/styles.css
@@ -4,7 +4,7 @@
   * {
     box-sizing: border-box;
   }
-
+  /* Applies to all html files in body */
   body {
     font-family: "Helvetica", Sans-Serif;
     background-image: url("../static/img/Politechnika-Wrocławska.jpg");
@@ -16,20 +16,6 @@
 
   a:hover {
     color: red;
-  }
-  
-  .row {
-    font-size: 1.5vw;
-  }
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
-  .col {
-    float: left;
-    padding: 0.5vw;
   }
   
   .pre {
@@ -52,7 +38,7 @@
     background: rgba(0, 0, 0, 0.6);
     /* width: 20%; */
     width: 100%;
-    height: 24vw;
+    height: 40vw;
     overflow: auto;
     padding: 1.5vw;
     font-size: 1.5vw;
@@ -90,12 +76,7 @@
     border-radius: 10px; */
   }
   
-  .topnav a:hover {
-    background-color: #585353;
-    color: black;
-  }
-  
-  .topnav a.active {
+  .topnav a:hover, .topnav a.active, .dropdown-content a:hover {
     background-color: #585353;
     color: black;
   }
@@ -134,11 +115,6 @@
     text-align: left;
 }
 
-.dropdown-content a:hover {
-    background-color: #585353;
-    color: black;
-}
-
 .dropdown:hover .dropdown-content {
     display: block;
     position: fixed;
@@ -146,15 +122,6 @@
 }
 
 /* Kolumny i rzędy dla contentu */
-  .row {
-    font-size: 1.5vw;
-  }
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
   .col {
     float: center;
     padding: 0.5vw;
@@ -166,15 +133,11 @@
     justify-content: center;
     align-items: center;
     width: 100%; 
+    font-size: 1.5vw;
   }
   .row::after {
     content: "";
     clear: both;
     display: table;
-    text-align: center;
-  }
-  
-  .col {
-    padding: 0.5vw;
     text-align: center;
   }
