added style for personal data form

--- a/project/rekrutacja/myapp/static/styles.css
+++ b/project/rekrutacja/myapp/static/styles.css
@@ -141,3 +141,10 @@
     display: table;
     text-align: center;
   }
+
+  /* Styl dla inputu formularzy */
+  .input {
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
