--- a/project/rekrutacja/myapp/templates/personal_data.html
+++ b/project/rekrutacja/myapp/templates/personal_data.html
@@ -2,6 +2,6 @@
 <form method="post" class="{% url 'dane_osobowe' %}">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Submit</button>
+    <button class="button" type="submit">Submit</button>
 </form>
 {% endblock %}
