fixed signup, added simple adress form

--- a/project/rekrutacja/myapp/templates/login.html
+++ b/project/rekrutacja/myapp/templates/login.html
@@ -13,7 +13,7 @@
     <h1>Logowanie</h1>
     {{ form.as_p }}
     <button class="button" type="submit">Zaloguj</button><br>
-    <a href="{% url 'signup' %}">Utwórz konto/a>
+    <a href="{% url 'signup' %}">Utwórz konto/<a>
 </form>
       </div><br>
     </div>
