--- a/project/rekrutacja/myapp/templates/signup.html
+++ b/project/rekrutacja/myapp/templates/signup.html
@@ -3,32 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
-    <script src="../static/index.js"></script>
     <title>Signup Page</title>
 </head>
 <div class="container"> 
     <div class="content">
       <form method="POST" class="login-form">
-        <input type="hidden" name="csrfmiddlewaretoken" value="sZpRzwXJ0A1rNVcC53BoswINXVJEm0Hj6Emd6wAgeD3PXNBxEJHQdSuwbK52S2oL">
+        <input type="hidden" name="csrfmiddlewaretoken" value="4n4S8STVvPYQJpFsnocLPSo7jsrBhjTuuUowNayz6292QjQWAKDKqqc40TtWLHbS">
         <p>
-    <label for="id_username">Nazwa użytkownika:</label>
-    <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus="" required="" id="id_username"><br>
-      <!-- <span class="subtext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span> -->
+    <label for="id_username">Username:</label>
+    <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus="" required="" id="id_username">
+    
+    
+    
   </p>
 
+  
   <p>
-    <label for="id_password1">Hasło:</label>
-    <input type="password" name="password1" autocomplete="new-password" required="" id="id_password1">    
-  </p>
+    <label for="id_password1">Password:</label>
+    <input type="password" name="password1" autocomplete="new-password" required="" id="id_password1">
+    
+    
+    
+  <p></p>
+
+  
   <p>
-    <label for="id_password2">Potwierdź hasło:</label>
+    <label for="id_password2">Password confirmation:</label>
     <input type="password" name="password2" autocomplete="new-password" required="" id="id_password2">
+    
+    
+    
+      
+    
   </p>
-        <button class="button" type="submit">Utwórz konto</button><br>
+        <button type="submit">Utwórz konto</button>
         <a href="/login/">Masz już konto?</a>
 </form>
       </div><br>
-    </div>
-  </div>
-</body>
-</html>
