--- a/project/rekrutacja/myapp/templates/adres.html
+++ b/project/rekrutacja/myapp/templates/adres.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block title %}Index{% endblock %} {%block content%}
-<form method="post" class="{% url 'adres' %}">
+<form method="post" class="{% url 'dane_osobowe' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="button" type="submit">Submit</button>
