--- a/project/rekrutacja/myapp/templates/login.html
+++ b/project/rekrutacja/myapp/templates/login.html
@@ -12,8 +12,8 @@
     {% csrf_token %}
     <h1>Logowanie</h1>
     {{ form.as_p }}
-    <button class="button" type="submit">Zaloguj</button><br>
-    <a href="{% url 'signup' %}">Utwórz konto/<a>
+    <button class="button" type="submit">Zaloguj</button><br><br>
+    <a href="{% url 'signup' %}">Utwórz konto</a>
 </form>
       </div><br>
     </div>
