--- a/project/rekrutacja/myapp/templates/signup.html
+++ b/project/rekrutacja/myapp/templates/signup.html
@@ -36,7 +36,7 @@
       
     
   </p>
-        <button type="submit">Utwórz konto</button>
+        <button class="button" type="submit">Utwórz konto</button><br><br>
         <a href="/login/">Masz już konto?</a>
 </form>
       </div><br>
