--- a/project/rekrutacja/myapp/templates/base.html
+++ b/project/rekrutacja/myapp/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <link rel="stylesheet" type="text/css" href="{{ base_dir }}/static/styles.css/">
     <script src="../static/index.js"></script>
     <title>Base Page</title>
 </head>
