added forms of education

--- a/project/rekrutacja/myapp/templates/base.html
+++ b/project/rekrutacja/myapp/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{{ base_dir }}/static/styles.css/">
-    <script src="../static/index.js"></script>
+    <script src="{{ base_dir }}/static/index.js"></script>
     <title>Base Page</title>
 </head>
 <body>
