--- a/project/rekrutacja/myapp/templates/wyksztalcenie.html
+++ b/project/rekrutacja/myapp/templates/wyksztalcenie.html
@@ -4,10 +4,10 @@
         <a href="{% url 'matura' %}" class="button">Matura</a>
     </div>
     <div class="col">
-        <button  class="button">Olimpiady</button>
+        <a href="{% url 'achivments' %}" class="button">Olimpiady</a>
     </div>
     <div class="col">
-        <button  class="button">Wykształcenie wyższe</button>
+        <a href="{% url 'dyploma' %}" class="button">Wykształcenie Wyższe</a>
     </div>
 </div>
 {% endblock %}
