--- a/project/rekrutacja/myapp/templates/matura.html
+++ b/project/rekrutacja/myapp/templates/matura.html
@@ -1,7 +1,19 @@
 {% extends "base.html" %} {% block title %}Index{% endblock %} {%block content%}
-<form method="post" class="{% url 'matura' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="button" type="submit">Submit</button>
-</form>
+<div class="row">
+    <div class="col">
+        <form method="post" class="{% url 'matura' %}">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="button" type="submit">Submit</button>
+        </form>
+    </div>
+    <div class="col">
+        <form method="post">
+            {% csrf_token %}
+            {{ form_results.as_p }}
+            <button class="button" type="submit">Submit</button>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
