update to database and working bg image for all pages

--- a/project/rekrutacja/myapp/templates/signup.html
+++ b/project/rekrutacja/myapp/templates/signup.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
     <title>Signup Page</title>
 </head>
-<div class="container"> 
+<body style="background-image: url('../static/img/Politechnika-Wrocławska.jpg');">
+  <div class="container"> 
     <div class="content">
       <form method="POST" class="login-form">
         <input type="hidden" name="csrfmiddlewaretoken" value="4n4S8STVvPYQJpFsnocLPSo7jsrBhjTuuUowNayz6292QjQWAKDKqqc40TtWLHbS">
@@ -40,3 +41,4 @@
         <a href="/login/">Masz już konto?</a>
 </form>
       </div><br>
+</body>
