--- a/project/rekrutacja/myapp/templates/login.html
+++ b/project/rekrutacja/myapp/templates/login.html
@@ -6,7 +6,8 @@
     <script src="../static/index.js"></script>
     <title>Login Page</title>
 </head>
-<div class="container"> 
+<body style="background-image: url('../static/img/Politechnika-Wrocławska.jpg');">
+  <div class="container"> 
     <div class="content">
       <form method="POST" class="login-form">
     {% csrf_token %}
