--- a/project/rekrutacja/myapp/static/styles.css
+++ b/project/rekrutacja/myapp/static/styles.css
@@ -1,150 +1,162 @@
-.title, .text, .container .content, .pre, .col, a:link, a:visited {
-    color: white;
-  }
-  * {
-    box-sizing: border-box;
-  }
-  /* Applies to all html files in body */
-  body {
-    font-family: "Helvetica", Sans-Serif;
-    background-image: url("../img/Politechnika-Wrocławska.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: white;
-  }
+.title,
+.text,
+.container .content,
+.pre,
+.col,
+a:link,
+a:visited {
+  color: white;
+}
 
-  a:hover {
-    color: red;
-  }
-  
-  .pre {
-    overflow: auto;
-    max-height: 16vw;
-  }
-  
-  .container {
-    text-align: center;
-    position: relative;
-    margin: 0;
-  }
-  .container .content {
-    text-align: center;
-    position: absolute;
-    border-radius: 8px;
-    top: 100px;
-    /* left: 40%; */
-    background: #111810;
-    background: rgba(0, 0, 0, 0.6);
-    /* width: 20%; */
-    width: 100%;
-    height: 40vw;
-    overflow: auto;
-    padding: 1.5vw;
-    font-size: 1.5vw;
-  }
+* {
+  box-sizing: border-box;
+}
 
-  .button {
-    border: 3px solid #ddd;
-    border-radius: 12px;
-    color: black;
-    padding: 1vw 1vw;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: large;
-    margin: 2px 2px;
-    cursor: pointer;
-  }
+/* Applies to all html files in body */
+body {
+  font-family: "Helvetica", Sans-Serif;
+  background-image: url("../img/Politechnika-Wrocławska.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: white;
+}
+
+a:hover {
+  color: red;
+}
+
+.pre {
+  overflow: auto;
+  max-height: 16vw;
+}
+
+.container {
+  text-align: center;
+  position: relative;
+  margin: 0;
+}
+
+.container .content {
+  text-align: center;
+  position: absolute;
+  border-radius: 8px;
+  top: 100px;
+  /* left: 40%; */
+  background: #111810;
+  background: rgba(0, 0, 0, 0.6);
+  /* width: 20%; */
+  width: 100%;
+  height: 40vw;
+  overflow: auto;
+  padding: 1.5vw;
+  font-size: 1.5vw;
+}
+
+.button {
+  border: 3px solid #ddd;
+  border-radius: 12px;
+  color: black;
+  padding: 1vw 1vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: large;
+  margin: 2px 2px;
+  cursor: pointer;
+}
 
 /* Top navigation */
-  .topnav {
-    overflow: hidden;
-  }
-  
-  .topnav a {
-    float: left;
-    align-items: right;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-    flex: 1;
-    /* border: 2px solid black;
-    border-radius: 10px; */
-  }
-  
-  .topnav a:hover, .topnav a.active, .dropdown-content a:hover {
-    background-color: #585353;
-    color: black;
-  }
+.topnav {
+  overflow: hidden;
+}
 
-  /* Rozwijane Menu */
-   .dropdown {
-    float: left;
-    overflow: hidden;
+.topnav a {
+  float: left;
+  align-items: right;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+  flex: 1;
+  /* border: 2px solid black;
+    border-radius: 10px; */
+}
+
+.topnav a:hover,
+.topnav a.active,
+.dropdown-content a:hover {
+  background-color: #585353;
+  color: black;
+}
+
+/* Rozwijane Menu */
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
 .dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: black;
-    background-color: inherit;
-    margin: 0;
-    padding: 14px 16px;
-    text-align: center;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: black;
+  background-color: inherit;
+  margin: 0;
+  padding: 14px 16px;
+  text-align: center;
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 160px;
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  z-index: 1;
 }
 
 .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
-    position: fixed;
-    z-index: 9999;
+  display: block;
+  position: fixed;
+  z-index: 9999;
 }
 
 /* Kolumny i rzędy dla contentu */
-  .col {
-    float: center;
-    padding: 2.5vw;
-    text-align: center;
-  }
+.col {
+  float: center;
+  padding: 2.5vw;
+  text-align: center;
+}
 
-  .row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%; 
-    font-size: 1.5vw;
-  }
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-    text-align: center;
-  }
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-size: 1.5vw;
+}
 
-  /* Styl dla inputu formularzy */
-  .input {
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+  text-align: center;
+}
+
+/* Styl dla inputu formularzy */
+.input {
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
