--- a/project/rekrutacja/myapp/templates/signup.html
+++ b/project/rekrutacja/myapp/templates/signup.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../static/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="../static/styles.css" />
     <title>Signup Page</title>
-</head>
-<body style="background-image: url('../static/img/Politechnika-Wrocławska.jpg');">
-  <div class="container"> 
-    <div class="content">
-      <form method="POST" class="login-form">
-        <input type="hidden" name="csrfmiddlewaretoken" value="4n4S8STVvPYQJpFsnocLPSo7jsrBhjTuuUowNayz6292QjQWAKDKqqc40TtWLHbS">
-        <p>
-    <label for="id_username">Username:</label>
-    <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus="" required="" id="id_username">
-    
-    
-    
-  </p>
+  </head>
+  <body
+    style="background-image: url('../static/img/Politechnika-Wrocławska.jpg')"
+  >
+    <div class="container">
+      <div class="content">
+        <form method="POST" class="login-form">
+          {% csrf_token %}
+          <p>
+            <label for="id_username">Username:</label>
+            <input
+              type="text"
+              name="username"
+              maxlength="150"
+              autocapitalize="none"
+              autocomplete="username"
+              autofocus=""
+              required=""
+              id="id_username"
+            />
+          </p>
 
-  
-  <p>
-    <label for="id_password1">Password:</label>
-    <input type="password" name="password1" autocomplete="new-password" required="" id="id_password1">
-    
-    
-    
-  <p></p>
+          <p>
+            <label for="id_password1">Password:</label>
+            <input
+              type="password"
+              name="password1"
+              autocomplete="new-password"
+              required=""
+              id="id_password1"
+            />
+          </p>
 
-  
-  <p>
-    <label for="id_password2">Password confirmation:</label>
-    <input type="password" name="password2" autocomplete="new-password" required="" id="id_password2">
-    
-    
-    
-      
-    
-  </p>
-        <button class="button" type="submit">Utwórz konto</button><br><br>
-        <a href="/login/">Masz już konto?</a>
-</form>
-      </div><br>
-</body>
+          <p>
+            <label for="id_password2">Password confirmation:</label>
+            <input
+              type="password"
+              name="password2"
+              autocomplete="new-password"
+              required=""
+              id="id_password2"
+            />
+          </p>
+          <button class="button" type="submit">Utwórz konto</button><br /><br />
+          <a href="/login/">Masz już konto?</a>
+        </form>
+      </div>
+    </div>
+  </body>
+</html>
