fixed signup page

--- a/project/rekrutacja/myapp/templates/base.html
+++ b/project/rekrutacja/myapp/templates/base.html
@@ -27,7 +27,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href= "{% url 'settings' %}">USTAWIENIA</a>
+                <a href="{% url 'password_change' %}">ZMIEŃ HASŁO</a>
                 <!-- <a href= "/notifications">POWIADOMIENIA</a> -->
                 <a href= "{% url 'logout' %}">WYLOGUJ SIĘ</a>
               </div>
