--- a/project/rekrutacja/myapp/templates/signup.html
+++ b/project/rekrutacja/myapp/templates/signup.html
@@ -6,7 +6,7 @@
     <title>Signup Page</title>
   </head>
   <body
-    style="background-image: url('../static/img/Politechnika-Wrocławska.jpg')"
+    style="background-image: url('../static/img/Politechnika_Wroclawska.jpg')"
   >
     <div class="container">
       <div class="content">
