--- a/project/rekrutacja/myapp/templates/login.html
+++ b/project/rekrutacja/myapp/templates/login.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../static/styles.css">
   <script src="../static/index.js"></script>
-  <title>Login Page</title>
+  <title>Zaloguj się!</title>
 </head>
 
-<body style="background-image: url('../static/img/Politechnika-Wrocławska.jpg');">
+<body style="background-image: url('../static/img/Politechnika_Wroclawska.jpg');">
   <div class="container">
     <div class="content">
       <form method="POST" class="login-form">
